--- a/app/views/products.ejs
+++ b/app/views/products.ejs
@@ -9,8 +9,8 @@
         <img src="/img/project1.png" alt="Project 1 Name" class="project-img" onclick="showLightbox('/img/project1.png')">
         <div class="project-info">
             <h3>Project 1 Name</h3>
-            <p><strong>Role:</strong> Your Role (e.g., Lead Developer)</p>
-            <p><strong>Outcome:</strong> A brief outcome or achievement related to the project. (e.g., Successfully developed a responsive web application that boosted user engagement by 50%).</p>
+            <p><strong>Role:</strong> Developer </p>
+            <p><strong>Outcome:</strong>This was a project where I created a web page for Realtor Client.</p>
         </div>
     </div>
     
@@ -19,8 +19,8 @@
         <img src="/img/project2.png" alt="Project 2 Name" class="project-img" onclick="showLightbox('/img/project2.png')">
         <div class="project-info">
             <h3>Project 2 Name</h3>
-            <p><strong>Role:</strong> Your Role (e.g., Project Manager)</p>
-            <p><strong>Outcome:</strong> A brief outcome or achievement related to the project. (e.g., Managed a team of 5 to deliver the project ahead of the deadline).</p>
+            <p><strong>Role:</strong> Developer </p>
+            <p><strong>Outcome:</strong> This project was a web page for a survey on school classes.</p>
         </div>
     </div>
     
@@ -29,8 +29,8 @@
         <img src="/img/project3.png" alt="Project 3 Name" class="project-img" onclick="showLightbox('/img/project3.png')">
         <div class="project-info">
             <h3>Project 3 Name</h3>
-            <p><strong>Role:</strong> Your Role (e.g., UI/UX Designer)</p>
-            <p><strong>Outcome:</strong> A brief outcome or achievement related to the project. (e.g., Designed an intuitive user interface that received positive feedback from 90% of beta testers).</p>
+            <p><strong>Role:</strong> Developer </p>
+            <p><strong>Outcome:</strong> This project was crawling of the cat pictures. </p>
         </div>
     </div>
 </main>
