--- a/app/views/services.ejs
+++ b/app/views/services.ejs
@@ -7,22 +7,22 @@
     <!-- Service 1: General Programming -->
     <div class="service-item">
         <img src="/img/java.png" alt="General Programming" class="service-img">
-        <h3>General Programming</h3>
-        <p>I provide high-quality general programming services to cater to your specific needs, ensuring optimized, efficient, and scalable solutions.</p>
+        <h3>JAVA</h3>&nbsp&nbsp&nbsp
+        <p>Java is my main back-end language</p>
     </div>
     
     <!-- Service 2: Web Development -->
     <div class="service-item">
         <img src="/img/JavaScript-logo.png" alt="Web Development" class="service-img">
-        <h3>Web Development</h3>
-        <p>From responsive designs to interactive user interfaces, our web development solutions are tailored to create the best online presence for you.</p>
+        <h3>JAVA SCRIPT</h3>&nbsp&nbsp&nbsp
+        <p>JavaScript is my favorite language</p>
     </div>
     
     <!-- Service 3: Mobile Apps -->
     <div class="service-item">
         <img src="/img/android-logo.jpg" alt="Mobile Apps" class="service-img">
-        <h3>Mobile Apps</h3>
-        <p>We design and develop user-centric mobile applications that enhance user engagement and drive business growth.</p>
+        <h3>ANDROID</h3>&nbsp&nbsp&nbsp&nbsp
+        <p>I just started to study Android</p>
     </div>
     
     <!-- Add more services as needed -->
